--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h2>Tema 1 Eksempler</h2>
 <ul>
 <li><a href="tema01/eksempler/eksempel-1.html">Eksempel 1</a></li>
+<li><a href="tema01/eksempler/eksempel-2.html">Eksempel 2</a></li>
 
 </ul>
 </body>
