--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <li><a href="tema01/eksempler/eksempel-1.html">Eksempel 1</a></li>
 <li><a href="tema01/eksempler/eksempel-2.html">Eksempel 2</a></li>
 
+<h3> Tema 2 Eksempler</h3>
+<ul>
+    <li><a href="tema02/eksempler/eksempel-1.html">Eksempel 1</a></li>
+</ul>
+
 </ul>
 </body>
 </html>
