--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 <li><a href="tema05/eksempler/3-slett-poststed.php">Eksempel 3</a>(Slett Poststed)</li>
 <li><a href="tema05/eksempler/4-endre-poststed.php">Eksempel 4</a>(Endre Poststed)</li>
 </ul>
+<ul>
+    <h2> Obligatorisk Oppgave 2</h2>
+    <li><a href="oppgave-2/2-klasse-registrer.php">Eksempel 1</a>(Registrer Klasse)</li>
+</ul>
 </ul>
 </body>
 </html>
