--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 </ul>
 <ul>
     <h2> Obligatorisk Oppgave 2</h2>
-    <li><a href="oppgave-2/2-klasse-registrer.php">Eksempel 1</a>(Registrer Klasse)</li>
+    <li><a href="oppgave-2/1-vis-klasse.php">1</a>Vis Alle Klasser</li>
+    <li><a href="oppgave-2/2-klasse-registrer.php">2</a>(Registrer Klasse)</li>
+    <li><a href="3-slett-klasse.php">3</a>Slett klasse</li>
+    <li><a href="4-vis-student.php">4</a>Vis alle studenter</li>
+    <li><a href="5-student-registrer.php">5</a>Registrer student</li>
+    <li><a href="6-slett-student.php">6</a>Slett student</li>
 </ul>
 </ul>
 </body>
