--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <h2> Obligatorisk Oppgave 2</h2>
     <li><a href="oppgave-2/1-vis-klasse.php">Vis Alle Klasser</a></li>
     <li><a href="oppgave-2/2-klasse-registrer.php">Registrer Klasse</a></li>
-    <li><a href="3-slett-klasse.php">Slett klasse</a></li>
-    <li><a href="4-vis-student.php">Vis alle studenter</a></li>
-    <li><a href="5-student-registrer.php">Registrer student</a></li>
-    <li><a href="6-slett-student.php">Slett student</a></li>
+    <li><a href="oppgave-2/3-slett-klasse.php">Slett klasse</a></li>
+    <li><a href="oppgave-2/4-vis-student.php">Vis alle studenter</a></li>
+    <li><a href="oppgave-2/5-student-registrer.php">Registrer student</a></li>
+    <li><a href="oppgave-2/6-slett-student.php">Slett student</a></li>
 </ul>
 </ul>
 </body>
